--- a/JScourse/09-dom-projects.html
+++ b/JScourse/09-dom-projects.html
@@ -10,10 +10,7 @@
 
 
 
-    <button onclick="
-      subscribe();
-        
-    " class="js-subscribe-button">Subscribe</button>
+    <button onclick="subscribe(); " class="js-subscribe-button">Subscribe</button>
 
 
 
